Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.2(EOL), 10.3(EOL), 10.4(EOL), 10.5(EOL)
-
ARMv8
Description
This is basically a re-request to fix MDEV-14374 as it was described. On target architectures where nothing special is available (not IA-32, AMD64, POWER), the macro UT_RELAX_CPU() would perform a dummy compare-and-swap operation.
According to krunalbauskar, this extra operation is visible in some benchmarks.
Attachments
Issue Links
- blocks
-
MDEV-23635 Add notional delay (using existing ut_delay) while spinning for registering reader in rw-locks
-
- Open
-
- relates to
-
MDEV-14374 UT_DELAY code : Removing hardware barrier for arm64 bit platform
-
- Closed
-
-
MDEV-24630 MY_RELAX_CPU assembly instruction upgrade/research for memory barrier on ARM
-
- Closed
-